# wellness-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
docs/requirements/: 001_PROJECT_FOUNDATIONS.md  002_WEEKLY_OBJECTIVES.md  003_WHOOP_DAILY_BRIEF.md
src/wellness_tracker/: __init__.py  config.py  main.py  orchestrator.py
src/wellness_tracker/agents/: base.py  whoop_brief.py
src/wellness_tracker/models/: envelope.py  objectives.py  outputs.py
src/wellness_tracker/prompts/: whoop_brief_agent.yaml
src/wellness_tracker/storage/: diary.py  objectives.py
tests/: conftest.py
tests/e2e/: test_whoop_e2e.py
tests/fixtures/: llm_responses.py
tests/integration/: test_whoop_pipeline.py
tests/unit/: test_config.py  test_project_structure.py
tests/unit/agents/: test_whoop_brief_agent.py
tests/unit/models/: test_envelope.py  test_objectives.py  test_whoop_context.py  test_whoop_output.py
tests/unit/storage/: test_diary.py  test_objectives.py
