[project]
name = "wellness-tracker"
version = "0.1.0"
description = "Personal wellness tracking system with multi-agent pipeline"
authors = [
    { name = "Mrpommygit-Sulli", email = "mrpommygit@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "pydantic>=2.0",
    "python-dotenv",
    "pyyaml",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "mypy",
    "ruff",
    "pre-commit",
    "types-pyyaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wellness_tracker.prompts" = ["*.yaml"]
